# ai-newstand

./: 2026-03-03-Newsletter.md  LEARNINGS.md  LICENSE  README.md  agentic-engineering-the-cost-of-conservative-scheduling-2026-03-08.md  agents.py  config.py  converging-infrastructure-reasoning-safety-and-edge-optimization-2026-03-06.md  db.py  docker-compose.yaml  draft-2026-03-08_rev0  draft-2026-03-09_rev0  feeds.json  fetch_article.py  ingest.py  main.py  operationalizing-agentic-ai-and-safety-constraints-2026-03-05.md  production-ai-infrastructure-shifts-2026-03-08.md  publisher.py  pyproject.toml  system-constraints-air-gaps-and-autonomous-recovery-2026-03-09.md  test_output.txt
archive/: 2026-03-03-Newsletter.md  2026-03-04-Newsletter.md  DRAFT.md  agents-logic-and-the-shift-from-model-to-context-2026-03-07.md  ai-infrastructure-agent-reliability-2026-03-09.md  draft-2026-03-09_rev-0  draft-2026-03-10_rev-0  security-and-context-engineering-2026-03-10.md
digests/: ai-governance-context-engineering-2026-03-10.md  ai-ops-governance-and-selfhosted-models-2026-04-01.md
drafts/2026-03-10/: draft-0
drafts/2026-04-01/: draft-0  draft-1  draft-2  edits-0  edits-1
notes/: TODO.md
