[project]
name = "ai-newstand"
version = "0.1.0"
description = "Daily newsletters on AI/ML/DevOps topics from k8s to Agentic Workflows!"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.61",
    "bs4>=0.0.2",
    "feedparser>=6.0.12",
    "ollama>=0.6.1",
    "requests>=2.32.5",
]
